--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -1,26 +1,26 @@
 <footer class="footer">
     <div class="container">
-        <div class="copyright">
+        <div class="copyright col6">
             <a href="#" class="logo"><i class="ico ico-logo ico-text">Serpento</i></a>
             <p class="copyright-text">Copyright 2014 - Todos los derechos reservados</p>
             <p class="grupo-monge">Grupo Monge Costa Rica</p>
         </div>
-        <div class="menu-accessibility">
-            <ul class="footer-list-products footer-list">
+        <div class="menu-accessibility col6-last">
+            <ul class="footer-lists col4">
                 <li class="title"><a href="#">Productos</a></li>
                 <li class="active"><a href="#">Motocicletas</a></li>
                 <li><a href="#">Accesorios</a></li>
                 <li><a href="#">Donde Comprar</a></li>
                 <li><a href="#">Talleres</a></li>
             </ul>
-            <ul class="footer-list-company footer-list">
+            <ul class="footer-lists col4">
                 <li class="title"><a href="#">Compañía</a></li>
                 <li><a href="#">Acerca</a></li>
                 <li><a href="#">Contacto</a></li>
                 <li><a href="#">Sitemap</a></li>
                 <li><a href="#">Grupo Monge</a></li>
             </ul>
-            <ul class="footer-list-follow-us footer-list">
+            <ul class="footer-lists col4-last">
                 <li class="title"><a href="#">Siguenos</a></li>
                 <li><a href="#">Facebook</a></li>
                 <li><a href="#">Twitter</a></li>
