--- a/app/_scss/_footer.scss
+++ b/app/_scss/_footer.scss
@@ -8,8 +8,6 @@
 }
 
 .copyright {
-    @include span-columns(6, 12);
-
     .logo {
         float: none;
     }
@@ -30,12 +28,7 @@
     color: $highlight-color;
 }
 
-.menu-accessibility {
-    @include span-columns(6 omega, 12);
-}
-
-.footer-list {
-    @include span-columns(4, 12);
+.footer-lists {
     margin-bottom: 0;
 
     > li {
@@ -60,8 +53,4 @@
             }
         }
     }
-}
-
-.footer-list-follow-us {
-    @include span-columns(4 omega, 12);
 }
