Progress on main banner

--- a/app/_scss/_variables.scss
+++ b/app/_scss/_variables.scss
@@ -7,6 +7,9 @@ $img-path: "../img/";
 //base color for headings and backgrounds
 $base-color: #000000;
 
+//inverted color
+$inverted-base-color: #FFFFFF;
+
 //base font color
 $base-font-color: #666666;
 
