--- a/app/_includes/home/main-banner.html
+++ b/app/_includes/home/main-banner.html
@@ -1,11 +1,17 @@
 <section class="main-banner has-rotated">
-    <div class="rotate rotate-right alternate-background rotate-top">
+    <div class="main-banner-image"></div>
+    <div class="rotate rotate-right main-banner-container rotate-top">
         <div class="rotate-left container">
-            <div class="col2 main-banner-content">
+            <div class="col6 main-banner-content">
                 <h1>Lorem ipsum dolor sit</h1>
-                <ul></ul>
+                <ul class="list">
+                    <li>Lorem ipsum dolor sit amet consectetur</li>
+                    <li>Adipisicing elit sed do eiusmod</li>
+                    <li>Incididunt labore dolore magna</li>
+                </ul>
+                <p><span class="price price-large">¢50.000</span><strong>FINANCIADO A 16 MESES</strong></p>
+                <p><span class="price price-small">¢750.000</span><strong>AL CONTADO</strong></p>
             </div>
-            <div class="col2-last"></div>
         </div>
     </div>
 </section>
