added the contentblocks and cerate the carousel

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -17,6 +17,13 @@
         <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
         <script src="http://modernizr.com/downloads/modernizr-latest.js"></script>
 
+
+
+        <!-- bxSlider Javascript file -->
+        <script src="/js/vendor/jquery.bxslider.min.js"></script>
+        <!-- bxSlider CSS file -->
+        <link href="/css/vendor/jquery.bxslider.css" rel="stylesheet" />
+
     </head>
     <body>
 
@@ -34,5 +41,11 @@
     <!-- build:js(app) /js/scripts.js -->
     <script src="/js/main.js"></script>
     <!-- endbuild -->
+
+    
+
+    {% contentblock inlinescripts %}
+
+
     </body>
 </html>
