--- a/app/_includes/home/main-banner.html
+++ b/app/_includes/home/main-banner.html
@@ -1,7 +1,7 @@
 <section class="main-banner has-rotated">
     <div class="main-banner-image"></div>
-    <div class="rotate rotate-right main-banner-container rotate-top">
-        <div class="rotate-left container">
+    <div class="main-banner-container">
+        <div class="container">
             <div class="col6 main-banner-content">
                 <h1>Lorem ipsum dolor sit</h1>
                 <ul class="list">
@@ -11,7 +11,10 @@
                 </ul>
                 <p><span class="price price-large">¢50.000</span><strong>FINANCIADO A 16 MESES</strong></p>
                 <p><span class="price price-small">¢750.000</span><strong>AL CONTADO</strong></p>
-            </div>
+                <a href="#" class="ribbon"><i class="ico ico-ribbon-alternate-base"></i><span class="ribbon-content ribbon-alternate"><strong>MAS INFORMACION</strong><i class="ico ico-gt-alternate"></i></span><i class="ico ico-ribbon-alternate-point"></i></a>
+                <a href="#">comprar </a>
+            </div> 
         </div>
     </div>
+    <div class="rotate rotate-right"></div>
 </section>
