--- a/app/_scss/_header.scss
+++ b/app/_scss/_header.scss
@@ -57,7 +57,8 @@
     // background-color: #101010; // Old browsers
     // @include filter-gradient(#101010, #000000, vertical); // IE6-9
     // @include background-image(linear-gradient(top,  #101010 0%,#000000 100%));
-
+    
+    border:1px solid #242424;
     
     background: #101010; /* Old browsers */
     background: -moz-linear-gradient(top,  #101010 0%, #000000 100%); /* FF3.6+ */
