progress in the main-banner

--- a/app/_includes/home/main-banner-carousel.html
+++ b/app/_includes/home/main-banner-carousel.html
@@ -1,9 +1,9 @@
 <ul class="bxslider">
-  <li><div style=" height: 200px; text-align: center; background-color: red; width: auto;"></div></li>
-  <li><div style=" height: 200px; text-align: center; background-color: blue; width: auto;"></div></li>
-  <li><div style=" height: 200px; text-align: center; background-color: green; width: auto;"></div></li>
-  <li><div style=" height: 200px; text-align: center; background-color: purple; width: auto;"></div></li>
-  <li><div style=" height: 200px; text-align: center; background-color: orange; width: auto;"></div></li>
+  <li>{% include home/slider/slider-1.html %}</li>
+  <li><div style=" height: 300px; text-align: center; background-color: blue; width: auto;"></div></li>
+  <li><div style=" height: 300px; text-align: center; background-color: green; width: auto;"></div></li>
+  <li><div style=" height: 300px; text-align: center; background-color: purple; width: auto;"></div></li>
+  <li><div style=" height: 300px; text-align: center; background-color: orange; width: auto;"></div></li>
 </ul>
 
 {% contentfor inlinescripts %}
