--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -14,6 +14,7 @@
 @import "_footer.scss";
 @import "_sprites.scss";
 @import "_banner.scss";
+@import "_carousel.scss";
 @import "_prices.scss";
 @import "_lists.scss";
 @import "_ribbons.scss";
