--- a/app/_includes/home/slider/slider-1.html
+++ b/app/_includes/home/slider/slider-1.html
@@ -12,7 +12,7 @@
                 <p><span class="price price-large">¢50.000</span><strong>FINANCIADO A 16 MESES</strong></p>
                 <p><span class="price price-small">¢750.000</span><strong>AL CONTADO</strong></p>
                 <a href="#" class="ribbon"><i class="ico ico-ribbon-alternate-base"></i><span class="ribbon-content ribbon-alternate"><strong>MAS INFORMACION</strong><i class="ico ico-gt-alternate"></i></span><i class="ico ico-ribbon-alternate-point"></i></a>
-                <a href="#">comprar </a>
+                <a href="#" class="inverted">Comparar Modelos<i class="ico ico-gt-small"></i></a>
             </div> 
         </div>
     </div>
