--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -41,6 +41,7 @@
 
     <!-- build:js(app) /js/scripts.js -->
     <script src="/js/main.js"></script>
+    <script src="/js/vendor/plugins/serpento-plugins.js"></script>
     <!-- endbuild -->
 
     
