progress in serpento

--- a/app/_scss/_banner.scss
+++ b/app/_scss/_banner.scss
@@ -8,7 +8,7 @@
 }
 
 .main-banner-container {
-    background: $base-color;
+    //background: $base-color;
 
     > div {
         padding-top: 6.25em; //100px
