--- a/app/_includes/home/slider/slider-1.html
+++ b/app/_includes/home/slider/slider-1.html
@@ -16,5 +16,5 @@
             </div> 
         </div>
     </div>
-    <div class="rotate rotate-right"></div>
+    <!-- <div class="rotate rotate-right"></div> -->
 </section>
