progress in serpento

--- a/app/_includes/home/main-banner-carousel.html
+++ b/app/_includes/home/main-banner-carousel.html
@@ -12,7 +12,9 @@
 {% contentfor inlinescripts %}
 <script type="text/javascript">
     $(document).ready(function(){
-        $('.bxslider').bxSlider();
+        $('.bxslider').bxSlider({
+            pager: false
+        });
     });
 </script>
 {% endcontentfor %}
