--- a/app/_includes/home/slider/slider-1.html
+++ b/app/_includes/home/slider/slider-1.html
@@ -1,6 +1,6 @@
 <section class="main-banner has-rotated">
     <div class="main-banner-image"></div>
-    <div class="main-banner-container">
+    <div class="main-banner-container actual-bg-height">
         <div class="container">
             <div class="col6 main-banner-content">
                 <h1>Lorem ipsum dolor sit</h1>
@@ -16,5 +16,5 @@
             </div> 
         </div>
     </div>
-    <!-- <div class="rotate rotate-right"></div> -->
+    
 </section>
