--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -21,7 +21,7 @@
 
 
         <!-- bxSlider Javascript file -->
-        <script src="/js/vendor/jquery.bxslider.min.js"></script>
+        <script src="/js/vendor/jquery.bxslider.js"></script>
         <!-- bxSlider CSS file -->
         <link href="/css/vendor/jquery.bxslider.css" rel="stylesheet" />
 
