--- a/app/_scss/_carousel.scss
+++ b/app/_scss/_carousel.scss
@@ -1,8 +1,10 @@
 .bx-wrapper {
     .bx-viewport {
         border: none !important;
+        background: none !important;
         box-shadow: none !important;
         left: 0 !important;
+        z-index: 10;
     }
 
     .bx-prev {
@@ -22,6 +24,11 @@
         text-indent: 0 !important;
         width: 70px !important;
     }
+
+    .rotate {
+        background: $base-color;
+        margin-top: -45px;
+    }
 }
 
 
@@ -40,3 +47,31 @@
     position: absolute;
     top: 50%;
 }
+
+.bx-viewport-bg {
+    background-color: #000000;
+    bottom: 3em;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+
+    .bx-viewport-container-bg-rotate {
+        bottom: -100px;
+        height: 140px;
+        overflow: hidden;
+        position: absolute;
+        width: 100%;
+    }
+
+    .rotate {
+        bottom: 65px;
+        height: auto;
+        margin-left: -12px;
+        margin-top: 0;
+        padding: 0;
+        position: absolute;
+        top: 0;
+    }
+}
+
