--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1119,10 +1119,6 @@ a > .ico-gt-small {
 .main-banner {
   min-height: 670px;
 }
-.main-banner > .rotate {
-  background: black;
-  margin-top: -45px;
-}
 
 .main-banner-container > div {
   padding-top: 6.25em;
@@ -1171,8 +1167,10 @@ a > .ico-gt-small {
 
 .bx-wrapper .bx-viewport {
   border: none !important;
+  background: none !important;
   box-shadow: none !important;
   left: 0 !important;
+  z-index: 10;
 }
 .bx-wrapper .bx-prev {
   background: none !important;
@@ -1189,6 +1187,10 @@ a > .ico-gt-small {
   text-indent: 0 !important;
   width: 70px !important;
 }
+.bx-wrapper .rotate {
+  background: black;
+  margin-top: -45px;
+}
 
 .img-arrow {
   left: 50%;
@@ -1196,6 +1198,31 @@ a > .ico-gt-small {
   margin-top: -10px;
   position: absolute;
   top: 50%;
+}
+
+.bx-viewport-bg {
+  background-color: #000000;
+  bottom: 3em;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+}
+.bx-viewport-bg .bx-viewport-container-bg-rotate {
+  bottom: -100px;
+  height: 140px;
+  overflow: hidden;
+  position: absolute;
+  width: 100%;
+}
+.bx-viewport-bg .rotate {
+  bottom: 65px;
+  height: auto;
+  margin-left: -12px;
+  margin-top: 0;
+  padding: 0;
+  position: absolute;
+  top: 0;
 }
 
 .price {
