Progress in home page

--- a/app/_includes/home/best-sale.html
+++ b/app/_includes/home/best-sale.html
@@ -23,7 +23,63 @@
             </div>
         </div>
     </div>
-    
+    <div class="best-sale-slider">
+        <ul class="bxslider">
+            <li>
+                <div class="container best-sale-container">
+                    <div class="col4">
+                        <div class="sale-column active">
+                            <img class="best-sale-product" src="/img/python-j100.png" alt="Python J100">
+                            <h3>Python J100</h3>
+                            <ul class="list">
+                                <li>Lorem ipsum dolor sit amet</li>
+                                <li>Adipisicing elit sed do eiusmod</li>
+                                <li>Incididunt labore dolore magna</li>
+                            </ul>
+                            <p class="price-container"><span class="price price-medium price-tile">¢50.000</span><strong>FINANCIADO A 16 MESES</strong></p>
+                            <p class="price-container"><span class="price price-small price-tile">¢750.000</span><strong>AL CONTADO</strong></p>
+                            <a href="#" class="ribbon"><i class="ico ico-ribbon-base"></i><span class="ribbon-content"><strong>MAS INFORMACION</strong><i class="ico ico-gt"></i></span><i class="ico ico-ribbon-point"></i></a>
+                            <a href="#">Comparar Modelos<i class="ico ico-gt-small"></i></a>
+                        </div>
+                    </div>
+                    <div class="col4">
+                        <div class="sale-column">
+                            <img class="best-sale-product" src="/img/python-j100.png" alt="Python J100">
+                            <h3>Python J100</h3>
+                            <ul class="list">
+                                <li>Lorem ipsum dolor sit amet</li>
+                                <li>Adipisicing elit sed do eiusmod</li>
+                                <li>Incididunt labore dolore magna</li>
+                            </ul>
+                            <p class="price-container"><span class="price price-medium price-tile">¢50.000</span><strong>FINANCIADO A 16 MESES</strong></p>
+                            <p class="price-container"><span class="price price-small price-tile">¢750.000</span><strong>AL CONTADO</strong></p>
+                            <a href="#" class="ribbon"><i class="ico ico-ribbon-base"></i><span class="ribbon-content"><strong>MAS INFORMACION</strong><i class="ico ico-gt"></i></span><i class="ico ico-ribbon-point"></i></a>
+                            <a href="#">Comparar Modelos<i class="ico ico-gt-small"></i></a>
+                        </div>
+                    </div>
+                    <div class="col4-last">
+                        <div class="sale-column">
+                            <img class="best-sale-product" src="/img/python-j100.png" alt="Python J100">
+                            <h3>Python J100</h3>
+                            <ul class="list">
+                                <li>Lorem ipsum dolor sit amet</li>
+                                <li>Adipisicing elit sed do eiusmod</li>
+                                <li>Incididunt labore dolore magna</li>
+                            </ul>
+                            <p class="price-container"><span class="price price-medium price-tile">¢50.000</span><strong>FINANCIADO A 16 MESES</strong></p>
+                            <p class="price-container"><span class="price price-small price-tile">¢750.000</span><strong>AL CONTADO</strong></p>
+                            <a href="#" class="ribbon"><i class="ico ico-ribbon-base"></i><span class="ribbon-content"><strong>MAS INFORMACION</strong><i class="ico ico-gt"></i></span><i class="ico ico-ribbon-point"></i></a>
+                            <a href="#">Comparar Modelos<i class="ico ico-gt-small"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li><div style=" height: 300px; text-align: center; background-color: blue; width: auto;"></div></li>
+            <li><div style=" height: 300px; text-align: center; background-color: green; width: auto;"></div></li>
+            <li><div style=" height: 300px; text-align: center; background-color: purple; width: auto;"></div></li>
+            <li><div style=" height: 300px; text-align: center; background-color: orange; width: auto;"></div></li>
+        </ul>    
+    </div>
 </section>
 {% contentfor inlinescripts %}
 <script type="text/javascript">
