--- a/app/_includes/home/slider/slider-1.html
+++ b/app/_includes/home/slider/slider-1.html
@@ -9,8 +9,8 @@
                     <li>Adipisicing elit sed do eiusmod</li>
                     <li>Incididunt labore dolore magna</li>
                 </ul>
-                <p><span class="price price-large">¢50.000</span><strong>FINANCIADO A 16 MESES</strong></p>
-                <p><span class="price price-small">¢750.000</span><strong>AL CONTADO</strong></p>
+                <p class="price-container"><span class="price price-large">¢50.000</span><strong>FINANCIADO A 16 MESES</strong></p>
+                <p class="price-container"><span class="price price-small">¢750.000</span><strong>AL CONTADO</strong></p>
                 <a href="#" class="ribbon"><i class="ico ico-ribbon-alternate-base"></i><span class="ribbon-content ribbon-alternate"><strong>MAS INFORMACION</strong><i class="ico ico-gt-alternate"></i></span><i class="ico ico-ribbon-alternate-point"></i></a>
                 <a href="#" class="inverted">Comparar Modelos<i class="ico ico-gt-small"></i></a>
             </div> 
