--- a/app/_scss/_base.scss
+++ b/app/_scss/_base.scss
@@ -18,7 +18,7 @@ body {
 
 h1, h2, h3, h4, h5, h6, p, ul {
     color: $base-color;
-    margin: 0 0 30px 0;
+    margin: 0;
     padding: 0;
 }
 
@@ -26,6 +26,7 @@ h1 {
     color: $base-color;
     font-size: 4.5em; //45px
     font-family: 'HelveticaNeue-CondensedBold', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    margin-bottom: 0.666666667em; //30px; 
 
     > sup {
         font-size: 25%;
@@ -41,7 +42,10 @@ h2 {
 }
 
 h3 {
-    font-size: 2em;
+    font-family: 'HelveticaNeue-CondensedBold', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 2.5em; //40px
+    letter-spacing: -0.025em; //-1px
+    margin-bottom: 0.5em; //20px
 }
 
 h4 {
@@ -56,9 +60,12 @@ h6 {
     font-size: 1em;
 }
 
+ul {
+    margin-bottom: 30px;
+}
+
 p {
-    // margin-bottom: 1.785714286em;
-    margin-bottom: 1.428571em;
+    margin-bottom: 1.25em; //20px
 }
 
 a {
@@ -70,6 +77,10 @@ a {
     &:hover {
         color: #7db701;
         text-decoration: underline;
+    }
+
+    &:visited {
+        color: $base-color;
     }
 
     &.inverted {
