--- a/app/_scss/_ribbons.scss
+++ b/app/_scss/_ribbons.scss
@@ -1,20 +1,24 @@
 .ribbon {
     display: inline-block;
+    font-size: 0.875em; //14px
     
     >.ribbon-content {
+        background: url("#{$img-path}bg-ribbon.jpg") repeat-x 0 0;
+        color: $inverted-base-color;
         display: inline-block;
         padding-left: 1.071428571em; //15px
+        line-height: 2.857142857em; //40px
         vertical-align: top;
+
+        > .ico {
+            margin-left: 0.857142857em; //12px
+            vertical-align: middle;
+        }
 
         &.ribbon-alternate {
             background: url("#{$img-path}bg-ribbon-alternate.jpg") repeat-x 0 0;
             color: $base-color;
             line-height: 3.571428571em; //50px
-
-            > .ico-gt-alternate {
-                margin-left: 0.857142857em; //12px
-                vertical-align: middle;
-            }
         }
     }
 }
