--- a/app/_scss/_variables.scss
+++ b/app/_scss/_variables.scss
@@ -26,5 +26,5 @@ $alternate-inverted-color: #7f7f7f;
 $main-font: 'Helvetica Neue', Helvetica, Arial, sans-serif; 
 
 //base font size
-$base-font-size: 1.6em;
+$base-font-size: 16px;
 
