--- a/app/_scss/_content.scss
+++ b/app/_scss/_content.scss
@@ -16,7 +16,7 @@
 
         > .select-box {
             margin-left: 1em; //16px
-            z-index: 1;
+            z-index: 99;
         }
     }
 }
@@ -65,5 +65,55 @@
 
     > .ribbon {
         margin-bottom: 2.142857143em; //30px
+    }
+}
+
+/*
+** Offers
+*/
+
+.offers {
+    padding-top: 82px;
+
+    > .rotate {
+        background-color: $alternate-background;
+        border-top: 1px solid #e4e4e4;
+        position: absolute;
+        top: 45px;
+    }
+
+    > .offers-container {
+        background-color: $alternate-background;
+        position: relative;
+        z-index: 1;
+    }
+}
+
+.offers-content {
+
+    > p {
+       color: $base-font-color; 
+       max-width: 50%;
+    } 
+    
+}
+
+.offers-column-container {
+    margin-top: 3.75em; //60px
+    margin-bottom: 5.625em; //90px
+    overflow: hidden;
+}
+
+.offers-column {
+    background-color: #eaeaea;
+    border: 1px solid #cfcfcf;
+    line-height: 200px;
+    min-height: 200px;
+    text-align: center;
+
+    > span {
+        color: $base-font-color; 
+        font-weight: bold;
+        vertical-align: middle;
     }
 }
