--- a/app/_includes/home/main-banner-carousel.html
+++ b/app/_includes/home/main-banner-carousel.html
@@ -1,6 +1,6 @@
 <ul class="bxslider">
   <li>{% include home/slider/slider-1.html %}</li>
-  <li><div style=" height: 300px; text-align: center; background-color: blue; width: auto;"></div></li>
+  <li>{% include home/slider/slider-2.html %}</li>
   <li><div style=" height: 300px; text-align: center; background-color: green; width: auto;"></div></li>
   <li><div style=" height: 300px; text-align: center; background-color: purple; width: auto;"></div></li>
 </ul>
