--- a/app/_scss/_content.scss
+++ b/app/_scss/_content.scss
@@ -24,6 +24,10 @@
 /*
 ** Best Sale
 */
+.best-sale {
+    margin-bottom: 4.0625em; //65px
+}
+
 .best-sale-slider {
     margin-top: 3.75em; //60px
 }
