progress in serpento

--- a/app/_includes/home/best-sale.html
+++ b/app/_includes/home/best-sale.html
@@ -132,7 +132,9 @@
 <script type="text/javascript">
     $(document).ready(function(){
         $('.select-box').selectBox();
-        $('.pafClase').setColumnsEqualHeight();
+        $('.pafClase').setColumnsEqualHeight({
+            parentHasHeight: true
+        });
     });
 </script>
 {% endcontentfor %}
